[package]
name = "bevy-hid"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6"
thiserror = { version = "2.0" }
bevy = { version = "0.17", default-features = true }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.0"

# Remove these later!
bevy-inspector-egui = "0.35.0"
bevy_egui = "=0.38.1"
