[package]
name = "bevy-hid"
version = "0.1.0"
edition = "2024"
description = "A hid plugin for bevy"
keywords = ["gamedev", "input", "bevy"]
authors = ["Fishy"]
readme = "README.md"
repository = "https://github.com/fishykins/bevy-hid/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6"
thiserror = { version = "2.0" }
bevy = { version = "0.17", default-features = false, features = ["bevy_log", "bevy_asset", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.0"